product-list.component.html updated

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -17,4 +17,22 @@ Product list
 
 
 </div>
+<div class="table-responsive">
+<table>
+  <thead>
+    <tr>
+      <th>
+        <button class="btn btn-primary">Show Image</button>
+      </th>
+      <th>Products</th>
+      <th>Code</th>
+      <th>Availabe</th>
+      <th>Price</th>
+      <th>5 star rating</th>
+    </tr>
+  </thead>
+  <tbody></tbody>
+</table>
+
+</div>
 </div>
