--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -4,14 +4,14 @@
 </div>
 <div class="card-body">
   <div class="row">
-    <div class="col-md-2">Filter by:</div>
+    <div class="col-md-2">Filter by: </div>
     <div class="col-md-4">
-      <input type="text">
+      <input type="text" [(ngModel)]='listFilter'>
     </div>
   </div>
   <div class="row">
     <div class="col-md-6">
-    <h4>Filtered by:</h4>
+    <h4>Filtered by: {{listFilter}}</h4>
     </div>
   </div>
 
