--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -35,7 +35,7 @@
     <tr *ngFor="let product of products">
       <td><img [src]='product.imageUrl' [title]='product.productName' *ngIf="showImage"></td>
       <td>{{product.productName}}</td>
-      <td>{{product.productCode | lowerca}}</td>
+      <td>{{product.productCode | lowercase}}</td>
       <td>{{product.releaseDate | date}}</td>
       <td>{{product.price | currency:'USD':'symbol':'1.2-2'}}</td>
       <td>{{product.starRating}}</td>
