--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -32,10 +32,10 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let product of products">
+    <tr *ngFor="let product of filteredProducts">
       <td><img [src]='product.imageUrl' [title]='product.productName' *ngIf="showImage"></td>
       <td>{{product.productName}}</td>
-      <td>{{product.productCode | lowercase}}</td>
+      <td>{{product.productCode | convertToSpaces:'-' | lowercase}}</td>
       <td>{{product.releaseDate | date}}</td>
       <td>{{product.price | currency:'USD':'symbol':'1.2-2'}}</td>
       <td>{{product.starRating}}</td>
