--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -38,7 +38,7 @@
       <td>{{product.productCode | convertToSpaces:'-' | lowercase}}</td>
       <td>{{product.releaseDate | date}}</td>
       <td>{{product.price | currency:'USD':'symbol':'1.2-2'}}</td>
-      <td><pm-star [rating]='product.starRating'></pm-star></td>
+      <td><pm-star [prodName]='product.productName' [rating]='product.starRating' (ratingClicked)='onRatingClicked($event)'></pm-star></td>
     </tr>
   </tbody>
 </table>
