--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -34,7 +34,8 @@
   <tbody>
     <tr *ngFor="let product of filteredProducts">
       <td><img [src]='product.imageUrl' [title]='product.productName' *ngIf="showImage"></td>
-      <td>{{product.productName}}</td>
+      <td><a [routerLink]="['/products', product.productId]">
+        {{product.productName}}</a></td>
       <td>{{product.productCode | convertToSpaces:'-' | lowercase}}</td>
       <td>{{product.releaseDate | date}}</td>
       <td>{{product.price | currency:'USD':'symbol':'1.2-2'}}</td>
