--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -12,12 +12,12 @@
 
       <div class="text-center">Developed by:</div>
       <div class="text-center">
-        <h3>Deborah Kurata</h3>
+        <h3>Obikaonu Samuel</h3>
       </div>
 
-      <div class="text-center">@deborahkurata</div>
+      <div class="text-center">@sam_icey</div>
       <div class="text-center">
-        <a href="http://www.bit.ly/DeborahKsBlog">www.bit.ly/DeborahKsBlog</a>
+        <a href="https://github.com/samicey">Samuel (Github)</a>
       </div>
     </div>
   </div>
