--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -5,7 +5,7 @@
   <div class="card-body">
     <div class="container-fluid">
       <div class="text-center">
-        <img src="./assets/images/logo.jpg"
+        <img src="https://avatars1.githubusercontent.com/u/49449271?s=400&u=8e927bbd00e36b62889004ea2d19132c2794eb4f&v=4"
              class="img-responsive center-block"
              style="max-height:300px;padding-bottom:50px" />
       </div>
